objects/Knowledge__kav.object
<CustomObject>

    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <label>Knowledge</label>
    <pluralLabel>Knowledge</pluralLabel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>This field is use to store category for Knowledge Article and use to show on Supplier Portal Search Page</description>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoicing</fullName>
                </value>
                <value>
                    <fullName>Ordering</fullName>
                </value>
                <value>
                    <fullName>Profile update</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>This field is use to set the priority of the knowledge article and based on this field value filter the knowledge article shown on the supplier portal search page</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question for FAQ</description>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <inlineHelpText>Attach a file.</inlineHelpText>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <label>Request Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article__c</fullName>
        <label>Knowledge Article</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Catalogue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Catalogue</label>
        <referenceTo>Service_Catalogue__c</referenceTo>
        <relationshipLabel>Knowledge</relationshipLabel>
        <relationshipName>Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request_URL__c</fullName>
        <inlineHelpText>Enter the full URL for the Remedyforce Service Request</inlineHelpText>
        <label>Service Request URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Supplier_Portal_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be use for differentiating between normal knowledge article record and supplier portal knowledge article record.</description>
        <label>Supplier Portal Article</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>